fix open merge/squash/reb button

--- a/github-dark.css
+++ b/github-dark.css
@@ -36216,8 +36216,7 @@
   /* light grey gradient */
   .signup-button:hover, a.signin:hover, .hero .textographic,
   .hero .screenographic, .pagination span.current, .box-action:active,
-  .clone-url-button.selected > .clone-url-link:hover, ul#bootcamp li a:hover h4,
-  [open] > .btn {
+  .clone-url-button.selected > .clone-url-link:hover, ul#bootcamp li a:hover h4 {
     background: linear-gradient(#303030, #282828) !important;
     border-color: #484848 !important;
   }
